Update index.html for improved layout and titles

--- a/index.html
+++ b/index.html
@@ -1,40 +1,59 @@
 <!doctype html>
 <html lang="it">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Immobili – Hub / Estrai / Scout</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Immobili – Strumenti</title>
+
   <style>
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#f5f6f8;color:#111}
-    .wrap{max-width:760px;margin:0 auto;padding:22px 14px 60px}
-    .card{background:#fff;border-radius:16px;padding:18px;box-shadow:0 10px 30px rgba(0,0,0,.08)}
-    h1{margin:0;font-size:22px}
-    p{color:#555;line-height:1.45}
-    .grid{display:grid;gap:12px;margin-top:14px}
-    a.btn{
-      display:block;text-decoration:none;text-align:center;
-      padding:14px;border-radius:14px;border:1px solid #ddd;background:#fff;
-      font-weight:800;color:#111;
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      background:#f5f6f8;
+      color:#111;
     }
-    a.primary{background:#111;color:#fff;border-color:#111}
-    .note{margin-top:10px;color:#666;font-size:13px}
+    .wrap{
+      max-width:600px;
+      margin:auto;
+      padding:40px 16px;
+    }
+    .card{
+      background:#fff;
+      border-radius:16px;
+      padding:24px;
+      box-shadow:0 10px 30px rgba(0,0,0,.08);
+    }
+    h1{margin:0;font-size:24px}
+    p{color:#555}
+    a{
+      display:block;
+      text-decoration:none;
+      margin-top:14px;
+      padding:16px;
+      text-align:center;
+      border-radius:14px;
+      font-weight:800;
+      border:1px solid #ddd;
+      color:#111;
+      background:#fff;
+    }
+    a.primary{
+      background:#111;
+      color:#fff;
+      border-color:#111;
+    }
   </style>
 </head>
+
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>Strumenti immobili</h1>
-      <p>Scegli cosa vuoi fare.</p>
+      <h1>Strumenti Immobiliari</h1>
+      <p>Scegli cosa vuoi fare:</p>
 
-      <div class="grid">
-        <a class="btn primary" href="./hub.html">🔎 Hub “città in vendita”</a>
-        <a class="btn" href="./estrai.html">📋 Estrai (manuale-assistito, a video)</a>
-        <a class="btn" href="./scout.html">🧭 Scout (lista immobili salvati)</a>
-      </div>
-
-      <div class="note">
-        Se un tasto dà “404”, significa che quel file non esiste nel repository.
-      </div>
+      <a class="primary" href="hub.html">🔎 HUB – Tutti gli immobili in città</a>
+      <a href="scout.html">🧭 SCOUT – Segnala immobili</a>
+      <a href="estrai.html">📋 ESTRAI – Visualizza annunci</a>
     </div>
   </div>
 </body>
