--- a/scout.html
+++ b/scout.html
@@ -6,87 +6,53 @@
   <title>Modalità Scout – Immobili</title>
 
   <style>
-    body{
-      margin:0;
-      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
-      background:#f5f6f8;
-      color:#111;
-    }
-    .wrap{
-      max-width:980px;
-      margin:auto;
-      padding:20px 14px 80px;
-    }
-    .card{
-      background:#fff;
-      border-radius:16px;
-      padding:18px;
-      box-shadow:0 10px 30px rgba(0,0,0,.08);
-      margin-top:14px;
-    }
+    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#f5f6f8;color:#111}
+    .wrap{max-width:980px;margin:auto;padding:20px 14px 80px}
+    .card{background:#fff;border-radius:16px;padding:18px;box-shadow:0 10px 30px rgba(0,0,0,.08);margin-top:14px}
     h1{margin:0;font-size:22px}
     p{color:#555;line-height:1.45}
     label{font-weight:700;font-size:13px;margin-top:12px;display:block}
     input,textarea{
-      width:100%;
-      padding:12px;
-      border-radius:12px;
-      border:1px solid #ddd;
-      font-size:14px;
-      margin-top:6px;
+      width:100%;padding:12px;border-radius:12px;border:1px solid #ddd;font-size:14px;margin-top:6px
     }
     textarea{min-height:70px}
+    .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px;align-items:center}
     button{
-      padding:12px 14px;
-      border-radius:12px;
-      border:1px solid #ddd;
-      background:#fff;
-      cursor:pointer;
-      font-weight:700;
+      padding:12px 14px;border-radius:12px;border:1px solid #ddd;background:#fff;cursor:pointer;font-weight:800
     }
-    button.primary{
-      background:#111;
-      color:#fff;
-      border-color:#111;
-    }
-    .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
-    table{
-      width:100%;
-      border-collapse:collapse;
-      margin-top:12px;
-    }
-    th,td{
-      border-bottom:1px solid #eee;
-      padding:10px;
-      font-size:13px;
-      vertical-align:top;
-    }
-    th{color:#666;font-size:12px}
-    a{color:#111;font-weight:700}
-    .actions{display:flex;gap:8px}
-    .pill{
-      display:inline-block;
-      padding:3px 10px;
-      border-radius:999px;
-      border:1px solid #eee;
-      font-size:12px;
-      color:#666;
-    }
+    button.primary{background:#111;color:#fff;border-color:#111}
+    table{width:100%;border-collapse:collapse;margin-top:12px}
+    th,td{border-bottom:1px solid #eee;padding:10px;font-size:13px;vertical-align:top}
+    th{color:#666;font-size:12px;white-space:nowrap}
+    a{color:#111;font-weight:800}
+    .pill{display:inline-block;padding:3px 10px;border-radius:999px;border:1px solid #eee;font-size:12px;color:#666}
     .muted{color:#666;font-size:13px}
+    .topbar{display:flex;gap:10px;flex-wrap:wrap;justify-content:flex-end}
+    .nav{ text-decoration:none;padding:10px 12px;border-radius:12px;border:1px solid #ddd;background:#fff;color:#111;font-weight:900 }
   </style>
 </head>
 
 <body>
   <div class="wrap">
+    <div class="topbar">
+      <a class="nav" href="./index.html">🔎 Hub</a>
+      <a class="nav" href="./ocr.html" target="_blank">📸 OCR</a>
+    </div>
+
     <h1>🧭 Modalità Scout – Immobili</h1>
-    <p>
-      Salva immobili interessanti mentre navighi sui portali.
-      Nessun scraping. Solo link + analisi.
-    </p>
+    <p>Incolla il link, poi usa <b>Apri annuncio + OCR</b> per fare lo screenshot e importare i dati in automatico (via OCR).</p>
 
     <div class="card">
       <label>Link annuncio</label>
       <input id="link" placeholder="Incolla qui il link dell’annuncio">
+
+      <div class="row">
+        <button class="primary" id="btnOpenGuide">Apri annuncio + OCR (guidato)</button>
+        <button id="btnOpenOnly">Apri annuncio</button>
+        <span class="pill" id="status">Pronto.</span>
+      </div>
+
+      <hr style="border:none;border-top:1px solid #eee;margin:14px 0">
 
       <label>Zona / Via</label>
       <input id="zone" placeholder="Es: Via Trieste / Centro">
@@ -94,19 +60,23 @@
       <label>Prezzo</label>
       <input id="price" placeholder="Es: 165.000 €">
 
-      <label>Nota scout (perché è interessante)</label>
-      <textarea id="note" placeholder="Es: annuncio fermo, foto scarse, prezzo alto, privato…"></textarea>
+      <label>Nota scout</label>
+      <textarea id="note" placeholder="Es: annuncio interessante, prezzo alto/basso, foto scarse, privato…"></textarea>
 
       <div class="row">
-        <button class="primary" onclick="add()">Salva immobile</button>
+        <button class="primary" onclick="addManual()">Salva (manuale)</button>
         <button onclick="clearAll()">Svuota lista</button>
         <span class="pill" id="count">0 immobili</span>
+      </div>
+
+      <div class="muted" style="margin-top:10px">
+        Tip: se usi OCR, non devi riempire Zona/Prezzo qui — li compila OCR quando premi “Aggiungi”.
       </div>
     </div>
 
     <div class="card">
       <h2 style="margin:0;font-size:18px">Immobili segnalati</h2>
-      <div class="muted">Questa lista resta nel browser (localStorage).</div>
+      <div class="muted">Salvati sul tuo browser (localStorage).</div>
 
       <table id="table" style="display:none">
         <thead>
@@ -122,22 +92,26 @@
         <tbody id="tbody"></tbody>
       </table>
 
-      <div id="empty" class="muted" style="margin-top:12px">
-        Nessun immobile salvato.
-      </div>
+      <div id="empty" class="muted" style="margin-top:12px">Nessun immobile salvato.</div>
     </div>
   </div>
 
 <script>
   let items = JSON.parse(localStorage.getItem("scout_items") || "[]");
 
+  const statusEl = document.getElementById("status");
+  const linkEl = document.getElementById("link");
+
+  function setStatus(s){ statusEl.textContent = s; }
+
   function save(){
     localStorage.setItem("scout_items", JSON.stringify(items));
     render();
   }
 
-  function add(){
-    const link = document.getElementById("link").value.trim();
+  // ✅ Manuale (se vuoi)
+  function addManual(){
+    const link = linkEl.value.trim();
     if(!link) return alert("Inserisci il link dell’annuncio");
 
     items.push({
@@ -148,12 +122,12 @@
       ts: Date.now()
     });
 
-    document.getElementById("link").value="";
     document.getElementById("zone").value="";
     document.getElementById("price").value="";
     document.getElementById("note").value="";
 
     save();
+    setStatus("Salvato ✅");
   }
 
   function remove(i){
@@ -190,15 +164,53 @@
       const tr = document.createElement("tr");
       tr.innerHTML = `
         <td>${i+1}</td>
-        <td>${it.zone || "-"}</td>
-        <td>${it.price || "-"}</td>
-        <td>${it.note || "-"}</td>
-        <td><a href="${it.link}" target="_blank">Apri</a></td>
+        <td>${escapeHtml(it.zone || "-")}</td>
+        <td>${escapeHtml(it.price || "-")}</td>
+        <td>${escapeHtml(it.note || "-")}</td>
+        <td>${it.link ? `<a href="${it.link}" target="_blank">Apri</a>` : "-"}</td>
         <td><button onclick="remove(${i})">✕</button></td>
       `;
       tbody.appendChild(tr);
     });
   }
+
+  function escapeHtml(s){
+    return String(s||"")
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;")
+      .replaceAll("'","&#039;");
+  }
+
+  // ✅ GUIDA: apre annuncio + apre OCR + passa il link a OCR
+  function openGuided(){
+    const link = linkEl.value.trim();
+    if(!link) return alert("Incolla prima il link dell’annuncio");
+
+    // salva link “corrente” per OCR
+    localStorage.setItem("ocr_pending_link", link);
+    localStorage.setItem("ocr_pending_ts", String(Date.now()));
+
+    // apre annuncio e OCR
+    const w1 = window.open(link, "_blank", "noopener,noreferrer");
+    const w2 = window.open("./ocr.html", "_blank", "noopener,noreferrer");
+
+    let opened = 0;
+    if (w1) opened++;
+    if (w2) opened++;
+    setStatus(opened ? "Aperto ✅ Fai screenshot e caricalo in OCR." : "Popup bloccati: abilita popup per questo sito.");
+  }
+
+  function openOnly(){
+    const link = linkEl.value.trim();
+    if(!link) return alert("Incolla prima il link dell’annuncio");
+    const w = window.open(link, "_blank", "noopener,noreferrer");
+    setStatus(w ? "Annuncio aperto ✅" : "Popup bloccati: abilita popup.");
+  }
+
+  document.getElementById("btnOpenGuide").addEventListener("click", openGuided);
+  document.getElementById("btnOpenOnly").addEventListener("click", openOnly);
 
   render();
 </script>
